# product_intellgince_bot

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  trust-policy.json
.github/workflows/: cd.yml  ci.yml  task-definition.json
src/data_ingestion/: data_loader.py  data_transform.py  ingestion_pipeline.py  vector_store.py
src/notebooks/: notebook.ipynb
src/rag_app/: main.py
src/rag_app/api_services/middleware/: auth.py  logging_middleware.py  rate_limit.py
src/rag_app/api_services/schmeas/: chat.py
src/rag_app/api_services/services/: chatbot.py  health.py  router.py
src/rag_app/cache_layer/: redis_cache.py
src/rag_app/configure/: config_settings.py
src/rag_app/core_app/: chain.py  model_loader.py  retrieval.py
src/rag_app/logger_exceptions/: exception.py  handlers.py
src/rag_app/prompts_lib/: prompt.py
src/rag_app/utils/: logger.py
static/: style.css
templates/: chat.html
testing/e2e/: test_end_to_end.py
testing/integration_test/: conftest.py  test_chat_api.py  test_health_api.py  test_retrieval.py
testing/unit_test/: test_chain.py  test_config_settings.py  test_loader.py  test_schemas.py  test_transform.py
