[project]
name = "customer-support-bot"
version = "1.0.0"
description = "Production-grade RAG-powered customer support product-intelligence bot"
requires-python = ">=3.10"
dependencies = [
    # ⚡ Backend
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    # 🧠 LangChain
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-astradb",
    # 🤖 AI Models
    "google-generativeai",
    "openai",
    # 🗄️ Vector DB
    "astrapy",
    # ⚙️ Config & Utils
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "requests",
    "httpx",
    "tenacity",
    "tqdm",
    # 🔒 Rate limiting
    "slowapi",
    # 💾 Cache
    "redis",
    # 📊 Data
    "pandas",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "mypy",
    "coverage",
    "ragas",
]
[tool.ruff.per-file-ignores]
"testing/*" = ["F401", "F811"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["testing"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = ["e2e: marks tests as end-to-end (deselect with '-m not e2e')"]
addopts = "-m 'not e2e'"